--- a/techConnnect.html
+++ b/techConnnect.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechConnect</title>
 
-
     <style>
 
 .font{
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:
+'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 1em;
 }
 
@@ -17,7 +17,7 @@
     background-color: #f0f0f0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-align: center;
-   border: #333 2px solid;
+    border: #333 2px solid;
     border-radius: 8px;
     padding: 5px;
     font-size: 2em;
@@ -32,7 +32,8 @@ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 border:#333 2px solid;
 background-color: #f0f0f0;
 border-radius: 8px;
-padding: -10px;
+padding: 10px;
+margin: 10px;
 }
 
 .logo{
@@ -41,6 +42,8 @@ padding: -10px;
    display: flex;
    align-items: center;
    font-size: 2em;
+   flex-wrap: wrap;
+   justify-content: center;
 }
 
 .logo img{
@@ -53,6 +56,8 @@ padding: -10px;
 
 body{
     background-color: black;
+    margin: 0;
+    padding: 0;
 }
 
     
@@ -60,9 +65,11 @@ body{
             font-family: 'Arial', sans-serif;
             background-color: #f0f0f0;
             color: #333;
-            margin: -10px;
+            margin: 0;
             padding: 20px;
-            width: 99%;
+            width: 100%;
+            box-sizing: border-box;
+            text-align: center;
         }
 
         .resumo{
@@ -72,6 +79,7 @@ body{
             padding: 20px;
              font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
              background-color: yellow;
+             word-wrap: break-word;
         }
 
         .font-2{
@@ -79,30 +87,33 @@ body{
             border:2px solid;
             border-radius: 4px;
             padding: 2px;
-            margin: 20px
-            font- font-familys'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+            margin: 20px;
+            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
 
     .galeria{
         display: flex; 
-      justify-content: center; 
-      gap: 20px;                 
-      margin-top: 50px;
+        flex-wrap: wrap;
+        justify-content: center; 
+        gap: 20px;                 
+        margin-top: 50px;
+        padding: 10px;
     }
     
     .galeria img {
-      width: 200px;             
-      height: 200px;
+      max-width: 100%;             
+      height: auto;
+      display: block;
     }
 
 .back-ground{
-  
     background-color: grey;
     margin: 10px;
     padding: 20px;
     box-shadow: 0px 4px 8px;
-border: yellow 3px solid;
-width: 95%;
+    border: yellow 3px solid;
+    width: calc(100% - 40px);
+    box-sizing: border-box;
 }
 
 
@@ -113,47 +124,31 @@ font-size: 2.5em;
 
 }
 
-.IMG_CSS{
-    width: fit-content;
-      padding: 10px;
-      border: 3px solid black;
-      border-radius: 8px;
-      text-align: center;
-        background-color:#f0f0f0;
+.IMG_CSS,
+.IMG_CSS-1,
+.IMG_CSS-2,
+.IMG_CSS-3{
+    width: 280px; /* Ajustado para melhor visualização em telas menores */
+    padding: 10px;
+    border: 3px solid black;
+    border-radius: 8px;
+    text-align: center;
+    background-color:#f0f0f0;
+    box-sizing: border-box;
 }
 
-
-.IMG_CSS-1{
-      width: fit-content;
-      padding: 2px;
-      border: 2px solid black;
-      border-radius: 8px;
-      text-align: center;
-        background-color:#f0f0f0;
-    }
-
-    .IMG_CSS-2{
-      width: fit-content;
-      padding: 10px;
-      border: 3px solid black;
-      border-radius: 8px;
-      text-align: center;
-        background-color:#f0f0f0;
-    }
-
-.IMG_CSS-3{
- width: fit-content;
-      padding: 10px;
-      border: 3px solid black;
-      border-radius: 8px;
-      text-align: center;
-        background-color:#f0f0f0;
+.IMG_CSS-1 img {
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
     .coleta_dados{
       padding: 10px;
       border: 2px solid black;
       border-radius: 8px;
+      margin: 10px;
     }
 
 
@@ -162,6 +157,90 @@ font-size: 2.5em;
 }
 
 
+@media (max-width: 768px) {
+    .logo {
+        font-size: 1.5em;
+    }
+
+    .logo img {
+        width: 100px;
+        height: 100px;
+    }
+
+    .classe1 {
+        font-size: 1.5em;
+    }
+
+    .galeria {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .IMG_CSS,
+    .IMG_CSS-1,
+    .IMG_CSS-2,
+    .IMG_CSS-3 {
+        width: 90%;
+        max-width: 300px;
+    }
+
+    .resumo {
+        font-size: 0.9em;
+    }
+
+    .inscricao {
+        font-size: 2em;
+    }
+
+    footer {
+        padding: 15px;
+    }
+}
+
+@media (max-width: 480px) {
+    .logo {
+        font-size: 1.2em;
+    }
+
+    .logo img {
+        width: 80px;
+        height: 80px;
+    }
+
+    .classe1 {
+        font-size: 1.2em;
+    }
+
+    .resumo {
+        font-size: 0.8em;
+        padding: 15px;
+    }
+
+    .evento-info ul {
+        padding-left: 20px;
+    }
+
+    .inscricao {
+        font-size: 1.8em;
+    }
+
+    .coleta_dados label,
+    .coleta_dados input[type="text"],
+    .coleta_dados input[type="email"] {
+        width: calc(100% - 20px);
+        box-sizing: border-box;
+    }
+
+    .coleta_dados input[type="radio"],
+    .coleta_dados input[type="checkbox"] {
+        margin-left: 0;
+    }
+
+    .coleta_dados label[for="pr"],
+    .coleta_dados label[for="on"] {
+        margin-right: 10px;
+    }
+}
 
     </style>
 
@@ -266,7 +345,7 @@ Helena Dias
 
 <br><br>
 <label for="email"><b>E-mail</b></label>
-<input type="email" name="email" id"email" required>
+<input type="email" name="email" id="email" required>
 
 <br><br>
 <label for="op"><b>Tipo de Ingresso: </b></label>
@@ -276,7 +355,7 @@ Helena Dias
 <label for="on">online</label>
 <br><br>
 
-<label for="termo"><b>Ao confirmar, você estará concordando com nossas termos - </b></label>
+<label for="termo"><b>Ao confirmar, você estará concordando com nossos termos e condições - </b></label>
 <a href="https://policies.google.com/?hl=pt-BR">Ler Termos</a> <br><br>
 <label for="confirmar"></label>eu concordo</label>
 <input type="checkbox" name="termo" id="termo" required>
